$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-14 (opened March 9, 2012)

  * clamtest: wrongly used frequencies instead of the counts
  when calculating sample coverage to test x < coverage.limit. 
  No detectable differences were produced when rerunning 
  examples from Chazdon et al. 2011 and vegan help page.

	* Opened a new version with the CRAN release of vegan 2.0-3 on
	March 3, 2012.

	* Warton, Wright & Wang (Methods Ecol Evol 3, 89-101; 2012) had a
	paper where the analysed the confusion of location (differences
	between groups) and dispersion (variability within groups) in
	dissimilarity-based analyses.  We have warned on this for long in
	vegan, but now we can get support from this paper. Warnings added
	to anosim, mrpp, simper (where this worst) and adonis (where this
	was already analysed by Marti Anderson when introducing the
	method).

	* adipart: permutation tests assumed constant full gamma diversity
	in all simulations even when the null model could produce variable
	gamma diversities. The default method ("r2dtable") had constant
	gamma diversity.

	* anova of prc() objects by "axis", "terms" or "margin" failed due
	to NAMESPACE issues. Reported as issue #7 by Eduard Szöcs in
	github.com.

	* envfit: failed if some of the environmental variables were
	factor with unused factor levels. Fixed in centroids.cca. Reported
	as issue #8 in github.com by Eduard Szöcs.

	* msoplot: expose 'ylim' as an argument. Previously, 'ylim' was
	set internally and user could not change it setting, although
	y-axis maximum was sometimes so low that standard errors were
	outside the plot, and legend covered lines. The default setting of
	'ylim' was improved, and the function follows R idiom more
	closely. Reported in a private email to J.O. by Ricardo Pita.
	
Version 2.1-13 (closed March 9, 2012)

	* cca/rda/capscale: names of levels could be dropped if a
	two-class factor was used as the only constraint. Noticed in an